@@ -12,11 +12,18 @@ function setTranslation(trans) {
     translation = trans;
 }
 
-function i18n(str, val, val2) {
-    if (undefined==translation || !(str in translation) || translation[str]==="") {
-        return undefined==val ? str : undefined==val2 ? str.replace("%1", val) : str.replace("%1", val).replace("%2", val2);
+function i18n(str, val, val2, val3) {
+    let rv = undefined==translation || !(str in translation) || translation[str]==="" ? str : translation[str];
+    if (undefined!=val) {
+        rv = rv.replace("%1", val);
     }
-    return undefined==val ? translation[str] : undefined==val2 ? translation[str].replace("%1", val) : translation[str].replace("%1", val).replace("%2", val2);
+    if (undefined!=val2) {
+        rv = rv.replace("%2", val2);
+    }
+    if (undefined!=val3) {
+        rv = rv.replace("%3", val3);
+    }
+    return rv;
 }
 
 function i18np(singular, plural, val) {
