@@ -81,6 +81,7 @@
 "Composers":"",
 "Conductors":"",
 "Continuous":"",
+"Copy details":"",
 "Country":"",
 "Create":"",
 "Create folder":"",
@@ -243,6 +244,9 @@
 "Player settings":"",
 "Players":"",
 "Playing":"",
+"Playing %1":"",
+"Playing %1 by %2":"",
+"Playing %1 by %2 from %3":"",
 "Plugins":"",
 "Power on all group members when playing to group.":"",
 "Power on all upon play":"",
