@@ -42,9 +42,12 @@
 "Append random album to queue":"Tilføj tilfældigt album til menuen",
 "Append to queue":"Tilføj til kø",
 "Appended '%1' to the play queue":"Tilføjede '%1' til afspilningskøen",
+"Appended album to the play queue":"Tilføj album til afspilningskøen",
+"Appended all albums to the play queue":"Tilføj alle albums til afspilningskøen",
 "Appended all tracks to the play queue":"Tilføjede alle numre til afspilningskøen",
 "Appended track to the play queue":"Tilføjede nummeret til afspilningskøen",
 "Application layout":"Sidens udseende",
+"Application settings":"Programindstillinger",
 "Apply":"Anvend",
 "Apps":"Apps",
 "Artist Biography":"Kunstner biografi",
@@ -65,6 +68,7 @@
 "Cancel":"Afbryd",
 "Category":"Kategori",
 "Change library":"Skift bibliotek",
+"Changes":"Ændringer",
 "Check the standard items which you wish to appear on the home screen.":"Afryds de menupunkter du vil have med på forsiden",
 "Choose position":"Vælg indstilling",
 "Clear":"Nulstil",
@@ -72,6 +76,7 @@
 "Close":"Luk",
 "Collapse now playing":"Vis ikke kun aktuelle nummer",
 "Color":"Farve",
+"Color toolbars":"Værktøjslinje",
 "Compilations":"Kompilationer",
 "Composers":"Komponister",
 "Conductors":"Dirigenter",
@@ -86,6 +91,7 @@
 "Ctrl+Shift+%1":"Ctrl+shift+%1",
 "Current play queue":"Nuværende afspilningskø",
 "Dark":"Mørk",
+"Darker":"Mørkere",
 "Days":"Dage",
 "Decrease volume":"Skru ned for lyden",
 "Default player":"Standardafspiller",
@@ -97,6 +103,7 @@
 "Delete the selected items?":"Slet det valgte punkt?",
 "Description":"Beskrivelse",
 "Disc %1":"Skive",
+"Display rating stars.":"Vis vurderingsstjerner",
 "Display technical info":"Vis teknisk information",
 "Do not sleep":"Gå ikke i dvale",
 "Don't Stop The Music":"Stop aldrig afspilning - Don't Stop The Music",
@@ -108,6 +115,7 @@
 "Draw background":"Vis baggrund",
 "Draw large letter when scrolling certain lists (e.g. local artists, albums, etc.)":"Vis et stort bogstav øverst når der køres hurtigt igennem visse lister (fx kunstnere, albums)",
 "Draw letter overlay":"Vis stort bogstav",
+"Drop here to remove from group":"Træk hertil for at fjerne fra gruppen",
 "E-Mail":"E-mail",
 "ERROR: List processing failed":"FEJL: Kunne ikke behandle listen",
 "Each player may be assigned a 'virtual' library. If set then this will be used to restrict song selection for 'Random Mix' (only songs from the chosen library will be used), and other modes. This setting might also affect library browsing with other LMS control points (such as the default web UI).":"Hver afspiller kan gives et 'virtuels' musikbibliotek. Hvis dette er sat, indskrænkes udvalget af numre til fx 'Tilfældig miks' således at kun numre fra det valgte bibliotek bliver brugt. Denne indstilling påvirker også når musikbiblioteket vises via andre LMS kontrolpunkter (fx standard web UI'en).",
@@ -150,6 +158,9 @@
 "GitHub development page":"GitHub udviklingsside",
 "Go back":"Gå tilbage",
 "Go home":"Gå til forsiden",
+"Go to album":"Gå til album",
+"Go to artist":"Gå til kunstner",
+"Go to composer":"Gå til komponist",
 "Go to homescreen":"Gå til forsiden",
 "Group Players":"Gruppeafspillere",
 "Group members":"Gruppemedlemmer",
@@ -240,6 +251,7 @@
 "Previous/next long-press skip":"Ved langt tryk på forrige/næste skal der springes frem/tilbage som angivet her",
 "Provider":"Leverandør",
 "Queue":"Afspilningskø",
+"Quit":"Afslut",
 "Radio":"Radio",
 "Random Albums":"Tilfældige albums",
 "Random Mix":"Tilfældig miks",
@@ -305,12 +317,15 @@
 "Show all information":"Vis alt information",
 "Show context menu when clicking anywhere on an audio item.":"Vis kontekstafhængig menu når der klikkes på et nummer",
 "Show controls":"Vis værktøjslinje",
+"Show current date and time":"Vis dato og tid",
+"Show current date and time in main toolbar if there is sufficient space.":"Vis dato og tid i hovedværktøjslinjen hvis der er plads",
 "Show current track information":"Vis information om aktuelle nummer",
 "Show file type, bitrate, etc.":"Vis filtype, bithastighed m.v.",
 "Show icons next to popup menu entries.":"Vis ikoner inden i pop-up menuer",
 "Show image":"Vis billede",
 "Show information in tabs":"Vis information i faneblade",
 "Show playback controls and details of current track on Android's lock screen and notifications.":"Vis afspilningsknapper og detaljer om nuværende nummer på Androids låseskærm og underretninger",
+"Show rating":"Vis vurdering",
 "Show track information":"Vis nummerinformation",
 "Show track number":"Vis albumsnummer",
 "Show track's album number next to title.":"Vis nummerets nummer ved siden af titlen",
@@ -390,6 +405,7 @@
 "Updates available":"Opdatering tilgængelig",
 "Updating plugins.":"Opdaterer plugin",
 "Use artist, or album, images as background.":"Brug kunstner- eller albumbillede som baggrund",
+"Use chosen color for toolbars.":"Brug den valgte farve til værktøjslinjen",
 "Use cover of current track as background.":"Brug billede fra aktuelle nummer som baggrund",
 "Use desktop layout":"Brug computer layout (stor skærm)",
 "Use group player's power settings to control power of all members.":"Tænd/sluk af gruppen tænder/slukker alle gruppens afspillere.",
@@ -441,20 +457,8 @@
 "%1 Years":"%1 år",
 "1 day":"1 dag",
 "%1 days":"%1 dage",
-"Appended album to the play queue":"Tilføj album til afspilningskøen",
-"Appended all albums to the play queue":"Tilføj alle albums til afspilningskøen",
-"Application settings":"Programindstillinger",
-"Changes":"Ændringer",
-"Color toolbars":"Værktøjslinje",
-"Darker":"Mørkere",
-"Display rating stars.":"Vis vurderingsstjerner",
-"Drop here to remove from group":"Træk hertil for at fjerne fra gruppen",
-"Go to album":"Gå til album",
-"Go to artist":"Gå til kunstner",
-"Go to composer":"Gå til komponist",
-"Quit":"Afslut",
-"Show current date and time":"Vis dato og tid",
-"Show current date and time in main toolbar if there is sufficient space.":"Vis dato og tid i hovedværktøjslinjen hvis der er plads",
-"Show rating":"Vis vurdering",
-"Use chosen color for toolbars.":"Brug den valgte farve til værktøjslinjen"
+"Copy details":"",
+"Playing %1":"",
+"Playing %1 by %2":"",
+"Playing %1 by %2 from %3":""
 }
