@@ -434,6 +434,7 @@
 "Alt+N":"",
 "Audio":"",
 "Changes":"",
+"Copy details":"",
 "Disc %1":"",
 "Display rating stars.":"",
 "Drop here to remove from group":"",
@@ -448,6 +449,9 @@
 "Name":"",
 "OK":"",
 "Pause":"",
+"Playing %1":"",
+"Playing %1 by %2":"",
+"Playing %1 by %2 from %3":"",
 "Plugins":"",
 "Quit":"",
 "Radio":"",
