@@ -321,6 +321,7 @@
 "Color":"",
 "Color toolbars":"",
 "Continuous":"",
+"Copy details":"",
 "Country":"",
 "Creator":"",
 "Ctrl+%1":"",
@@ -385,6 +386,9 @@
 "Play/pause":"",
 "Player not found":"",
 "Players":"",
+"Playing %1":"",
+"Playing %1 by %2":"",
+"Playing %1 by %2 from %3":"",
 "Plugins":"",
 "Previous track":"",
 "Previous/next long-press skip":"",
