@@ -455,6 +455,10 @@
 "%1 Years":"%1 Jaren",
 "1 day":"1 dag",
 "%1 days":"%1 dagen",
+"Copy details":"",
 "Go to composer":"",
+"Playing %1":"",
+"Playing %1 by %2":"",
+"Playing %1 by %2 from %3":"",
 "Quit":""
 }
