@@ -443,6 +443,7 @@
 "Application settings":"",
 "Changes":"",
 "Color toolbars":"",
+"Copy details":"",
 "Darker":"",
 "Display rating stars.":"",
 "Drop here to remove from group":"",
@@ -450,6 +451,9 @@
 "Go to artist":"",
 "Go to composer":"",
 "No entries found":"",
+"Playing %1":"",
+"Playing %1 by %2":"",
+"Playing %1 by %2 from %3":"",
 "Quit":"",
 "Show current date and time":"",
 "Show current date and time in main toolbar if there is sufficient space.":"",
